# piano-falling-tiles

./: .gitignore  LICENSE  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/midi/: README.txt
app/src/main/assets/samples/piano/: README.txt
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  PianoSynthesizer.cpp  PianoSynthesizer.h  jni_bridge.cpp
app/src/main/java/com/pianotiles/: MainActivity.kt
app/src/main/java/com/pianotiles/audio/: AudioManager.kt  AudioTestActivity.kt
app/src/main/java/com/pianotiles/engine/: GameEngine.kt  HitDetector.kt  ScoreSystem.kt  TileScheduler.kt
app/src/main/java/com/pianotiles/midi/: BuiltInSongs.kt  MidiFileParser.kt  MidiFilePlayer.kt  MidiInputManager.kt  MidiMonitorActivity.kt  MidiParserActivity.kt  NoteEvent.kt  UsbMidiReceiver.kt
app/src/main/java/com/pianotiles/rendering/: CoordSystem.kt  GameRenderer.kt  GameSurfaceView.kt  KeyLayout.kt  ParticleSystem.kt  PianoKeyRenderer.kt  RenderCommand.kt  RenderingTestActivity.kt  ShaderProgram.kt  TilePool.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/raw/: tile_frag.glsl  tile_vert.glsl
app/src/main/res/values/: themes.xml
app/src/main/res/xml/: device_filter.xml
docs/: 00-overview.md  01-project-setup.md  02-rendering.md  03-audio.md  04-midi-input.md  05-midi-file.md  06-game-engine.md  07-ui.md  08-integration.md  09-testing.md
gradle/: libs.versions.toml
(+9 files in other folders)
